// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyzeDataIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-AnalyzeDataIcon"
>
  <path
    d="M0 15.5h16"
  />
  <path
    d="M2.5 10.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3-6a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm4 4a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
  />
  <circle
    cx="13.5"
    cy="2.5"
    r="2"
  />
  <path
    d="M1.5 10.5l4-5 4 4 3.065-5.364"
  />
</Icon>
`;

exports[`AnalyzeDataIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-AnalyzeDataIcon"
  isClickable={true}
>
  <path
    d="M0 15.5h16"
  />
  <path
    d="M2.5 10.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3-6a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm4 4a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
  />
  <circle
    cx="13.5"
    cy="2.5"
    r="2"
  />
  <path
    d="M1.5 10.5l4-5 4 4 3.065-5.364"
  />
</Icon>
`;

exports[`AnalyzeDataIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-AnalyzeDataIcon"
  isDisabled={true}
>
  <path
    d="M0 15.5h16"
  />
  <path
    d="M2.5 10.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3-6a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm4 4a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
  />
  <circle
    cx="13.5"
    cy="2.5"
    r="2"
  />
  <path
    d="M1.5 10.5l4-5 4 4 3.065-5.364"
  />
</Icon>
`;
